[workspace]
members = [".", "pooled_fetch"]
resolver = "2"

[package]
name = "gway"
version = "0.1.5"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/gway.git"
homepage = "https://github.com/i18n-site/gway"
description = "proxy"
keywords = []

[features]
cert_dir = []
log = []
default = []

[dependencies]
log_init = { version = "0.1.18" }
bytes = "1.10.1"
dashmap = "6.1.0"
faststr = "0.2.32"
futures-util = "0.3.31"
h3 = "0.0.8"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.16", features = ["client-legacy", "tokio"] }
listenfd = "1.0.2"
log = "0.4.27"
parking_lot = { version = "0.12.4", features = ["send_guard"] }
rustls = { version = "0.23.31", features = ["aws-lc-rs", "ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
s2n-quic = { version = "1.64.0", features = [
  "provider-tls-s2n",
  "s2n-quic-tls",
  "unstable_client_hello",
] }
static_init = "1.0.4"
sub_host = "0.1.0"
thiserror = "2.0.16"
tokio-rustls = { version = "0.26.2", default-features = false, features = [
  "ring",
] }
x509-parser = "0.18.0"
coarsetime = "0.1.36"
pooled_fetch = { version = "0.1.3", path = "pooled_fetch" }

[dependencies.tokio]
version = "1.47.1"
features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

[dev-dependencies]
rand = "0.9.2"
static_init = "1.0.4"
url = "2.5.7"
anyhow = "1.0.99"
faststr = "0.2.32"
const-str = "0.6.4"
axum = "0.8.4"
reqwest = { version = "0.12.23", features = [
  "http3",
  "rustls-tls",
  "rustls-tls-native-roots",
] }
quinn = "0.11.9"
h3-quinn = "0.0.10"
rustls-pki-types = "1.12.0"
webpki-roots = "1.0.2"
futures = "0.3.31"
logforth = { version = "0.27.0" }
tower-http = { version = "0.6.6", features = ["timeout"] }


[[example]]
name = "server"
path = "examples/server.rs"