[package]
name = "pooled_fetch"
version = "0.1.6"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/gway.git"
homepage = "https://github.com/i18n-site/gway/tree/main/pooled_fetch"
description = "A lightweight, asynchronous HTTP client connection pool built on hyper / 一个基于 hyper 构建的轻量级、异步的 HTTP 客户端连接池。"
keywords = ["http", "hyper", "pool", "fetch", "connection-pool"]

[dependencies]
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["client"] }
hyper-util = { version = "0.1.16", features = ["http1", "tokio"] }
log = "0.4.27"
static_init = "1.0.4"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["net", "rt"] }
