[package]
name = "_tmpl"
version = "0.1.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust-template.git"
homepage = "https://github.com/i18n-site/rust-template/tree/dev/_tmpl"
description = "_tmpl"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
aok = "0.1.17"
log_init = "0.1.18"
static_init = "1.0.4"
log = "0.4.27"

[dev-dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
